fix overflow-x

--- a/src/styles/layout.scss
+++ b/src/styles/layout.scss
@@ -9,6 +9,7 @@
     align-items: stretch;
     align-content: stretch;
     overflow-y: auto;
+    overflow-x: hidden;
 
     .header {
         width: 100%;
